// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThreeIdProvider .create Create instance with seed & v03ID 1`] = `
Object {
  "@context": "https://w3id.org/did/v1",
  "authentication": Array [
    Object {
      "publicKey": "did:3:bafyreidv6yl2bbmuslkqby45hdn6sd6ha22zlolxjjxxz4suuwfqpezewu#g75q7J22wuWRyHb",
      "type": "Secp256k1SignatureAuthentication2018",
    },
  ],
  "id": "did:3:bafyreidv6yl2bbmuslkqby45hdn6sd6ha22zlolxjjxxz4suuwfqpezewu",
  "keyAgreement": Array [
    Object {
      "controller": "did:3:bafyreidv6yl2bbmuslkqby45hdn6sd6ha22zlolxjjxxz4suuwfqpezewu",
      "id": "did:3:bafyreidv6yl2bbmuslkqby45hdn6sd6ha22zlolxjjxxz4suuwfqpezewu#FRNNWcZDvDZcpVC",
      "publicKeyBase58": "qFYM1z9dJUC1K7rphEDVCj8U1YTzeFDVXtsjTa2uSiS",
      "type": "X25519KeyAgreementKey2019",
    },
  ],
  "publicKey": Array [
    Object {
      "controller": "did:3:bafyreidv6yl2bbmuslkqby45hdn6sd6ha22zlolxjjxxz4suuwfqpezewu",
      "id": "did:3:bafyreidv6yl2bbmuslkqby45hdn6sd6ha22zlolxjjxxz4suuwfqpezewu#g75q7J22wuWRyHb",
      "publicKeyBase58": "P8fYfHCRRHYkNwtVjRadhgftUsyEr6FUy65WttgSjqaW2eDXvJeXuCZRTdFM9JXc72eS5EDuu52fsdthsuWN7TS1",
      "type": "Secp256k1VerificationKey2018",
    },
    Object {
      "controller": "did:3:bafyreidv6yl2bbmuslkqby45hdn6sd6ha22zlolxjjxxz4suuwfqpezewu",
      "id": "did:3:bafyreidv6yl2bbmuslkqby45hdn6sd6ha22zlolxjjxxz4suuwfqpezewu#FRNNWcZDvDZcpVC",
      "publicKeyBase58": "qFYM1z9dJUC1K7rphEDVCj8U1YTzeFDVXtsjTa2uSiS",
      "type": "Curve25519EncryptionPublicKey",
    },
  ],
}
`;

exports[`ThreeIdProvider .create Creates instance from seed 1`] = `
Object {
  "@context": "https://w3id.org/did/v1",
  "authentication": Array [
    Object {
      "publicKey": "did:3:kjzl6cwe1jw145sk1o41vwmkne6kw9g928uot09nf6bzlv1814vrs3xeybiovvs#e2Z2Dq3958ZPPWA",
      "type": "Secp256k1SignatureAuthentication2018",
    },
  ],
  "id": "did:3:kjzl6cwe1jw145sk1o41vwmkne6kw9g928uot09nf6bzlv1814vrs3xeybiovvs",
  "keyAgreement": Array [
    Object {
      "controller": "did:3:kjzl6cwe1jw145sk1o41vwmkne6kw9g928uot09nf6bzlv1814vrs3xeybiovvs",
      "id": "did:3:kjzl6cwe1jw145sk1o41vwmkne6kw9g928uot09nf6bzlv1814vrs3xeybiovvs#RvxVH2RhN7KTkKk",
      "publicKeyBase58": "9iv4ZyqUetpcFe4cQuoRwjhUDc42spkocJJkCuTnkNYz",
      "type": "X25519KeyAgreementKey2019",
    },
  ],
  "publicKey": Array [
    Object {
      "controller": "did:3:kjzl6cwe1jw145sk1o41vwmkne6kw9g928uot09nf6bzlv1814vrs3xeybiovvs",
      "id": "did:3:kjzl6cwe1jw145sk1o41vwmkne6kw9g928uot09nf6bzlv1814vrs3xeybiovvs#RvxVH2RhN7KTkKk",
      "publicKeyBase58": "9iv4ZyqUetpcFe4cQuoRwjhUDc42spkocJJkCuTnkNYz",
      "type": "Curve25519EncryptionPublicKey",
    },
    Object {
      "controller": "did:3:kjzl6cwe1jw145sk1o41vwmkne6kw9g928uot09nf6bzlv1814vrs3xeybiovvs",
      "id": "did:3:kjzl6cwe1jw145sk1o41vwmkne6kw9g928uot09nf6bzlv1814vrs3xeybiovvs#e2Z2Dq3958ZPPWA",
      "publicKeyBase58": "25sGY37UkdKKW4irbH9qxdxRUvqYZi5z26J5EqjTSAueS",
      "type": "Secp256k1VerificationKey2018",
    },
  ],
}
`;
